# accroresolv

./: .gitignore  README.md  pyproject.toml
src/acrresolv/: __init__.py  resolver.py  utils.py
