[project]
name = "acrresolv"
version = "0.2.0"
description = "Acronym Resolver"
readme = "README.md"
requires-python = ">=3.12.7"
authors = [
    { name = "Emiliano Gandini Outeda", email = "emiliano.gandini@protonmail.com" }
]
license = "MIT"
keywords = [
  "python",
  "text",
  "formatting",
  "acronyms"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "cleantext>=1.1.4",
    "pydantic>=2.13.4",
]
